--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
   min-width: 80vw;
   min-height: 600px;
   height: fit-content;
+  overflow-y: scroll;
   box-shadow: 8px 8px 24px -3px rgba(66, 68, 90, 1);
 }
 
