--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   min-width: 80vw;
   min-height: 600px;
   height: fit-content;
-  overflow-y: scroll;
+  overflow-y: auto;
   box-shadow: 8px 8px 24px -3px rgba(66, 68, 90, 1);
 }
 
@@ -22,4 +22,23 @@
 
 .top-right-legend {
   display: none;
+}
+
+.katex-display>.katex {
+  white-space: normal
+}
+
+/* Add space between broken lines: */
+.katex-display>.base {
+  margin: 0.25em 0
+}
+
+/* Compensate by reducing space around display math */
+.katex-display {
+  margin: 0.5em 0;
+}
+
+.MuiPaper-root>* {
+  display: flex;
+  justify-content: center;
 }
