--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .main {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,29 +8,41 @@
 }
 
 .container {
+  position: absolute;
+  top: 0;
   display: flex;
   flex-direction: column;
-  min-width: 80vw;
+  min-width: 60vw;
   min-height: 600px;
   height: fit-content;
   overflow-y: auto;
   box-shadow: 8px 8px 24px -3px rgba(66, 68, 90, 1);
 }
 
+.graph-wrapper {
+  display: flex;
+}
+
 .graph {
-  width: 100%;
+  width: fit-content;
+}
+
+.css-1l7c0cy>div>div>div {
+  display: flex;
+  justify-content: center;
+
 }
 
 .top-right-legend {
   display: none;
 }
 
-.katex-display > .katex {
+.katex-display>.katex {
   white-space: normal;
 }
 
 /* Add space between broken lines: */
-.katex-display > .base {
+.katex-display>.base {
   margin: 0.25em 0;
 }
 
@@ -39,7 +51,20 @@
   margin: 0.5em 0;
 }
 
-.MuiPaper-root > * {
+.MuiPaper-root>* {
   display: flex;
   justify-content: center;
 }
+
+/* FIXING WEIRD DIV HEIGHTS GOD HELP ME */
+
+/* .solutions,
+.css-ohwg9z,
+.css-1abc02a,
+.css-1f8sh1y,
+.css-1m9128y,
+.css-1l7c0cy,
+.css-1l7c0cy>div,
+.css-1l7c0cy>div>div {
+  height: fit-content !important;
+} */
