--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+body {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+}
+
 .main {
   width: 100%;
-  height: 100%;
+  height: fit-content;
   display: flex;
   justify-content: center;
   align-items: center;
   overflow-x: hidden;
 }
 
+h1 {
+  margin: 0;
+  font-weight: 400;
+  margin-bottom: 30px;
+  /*css reset*/
+  width: 50%;
+}
+
 .container {
-  position: absolute;
-  top: 0;
+  background-color: rgb(240, 240, 240);
+  box-sizing: border-box;
+  border-radius: 25px;
+  margin: 50px 0 50px 0;
+  padding: 40px;
   display: flex;
   flex-direction: column;
+  /* align-items: center; */
   min-width: 60vw;
   min-height: 600px;
   height: fit-content;
@@ -19,8 +38,47 @@
   box-shadow: 8px 8px 24px -3px rgba(66, 68, 90, 1);
 }
 
+.header-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 50px;
+}
+
+.header-wrapper>span,
+.function-wrapper {
+  border-radius: 25px;
+  padding: 20px;
+  /* border-radius: 65px; */
+  background: #f0f0f0;
+  box-shadow: 25px 25px 50px #d8d8d8,
+    -25px -25px 50px #ffffff;
+}
+
+.css-ohwg9z {
+  border-radius: 25px;
+  padding: 20px;
+  /* border-radius: 65px; */
+  background: #f0f0f0;
+  box-shadow: inset 15px 25px 10px #ededed,
+    -25px -25px 50px #ffffff;
+}
+
 .graph-wrapper {
   display: flex;
+}
+
+.function-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: fit-content;
+}
+
+.function-container {
+  display: flex;
+  justify-content: center;
 }
 
 .graph {
@@ -30,7 +88,22 @@
 .css-1l7c0cy>div>div>div {
   display: flex;
   justify-content: center;
+  width: auto;
+}
 
+.MuiPaper-root {
+  width: 100%;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.MuiPaper-root>* {
+  margin-block-start: 0.5em;
+  margin-block-end: 0.5em;
+  /* FIXING OPTICAL ILLUSIONS, I KNOW WHAT I'M DOING */
+  transform: translate(0, -15px);
 }
 
 .top-right-legend {
@@ -55,6 +128,7 @@
   display: flex;
   justify-content: center;
 }
+
 
 /* FIXING WEIRD DIV HEIGHTS GOD HELP ME */
 
