--- a/src/App.css
+++ b/src/App.css
@@ -65,9 +65,17 @@ h1 {
     -25px -25px 50px #ffffff;
 }
 
+.input-section,
 .graph-wrapper {
   display: flex;
-  align-items: center;
+
+}
+
+.input-field {
+  height: min-content;
+  bottom: 0;
+  margin-bottom: 0;
+  align-self: center;
 }
 
 .function-wrapper {
@@ -75,15 +83,23 @@ h1 {
   flex-direction: column;
   align-items: center;
   height: fit-content;
+  padding: 30px 50px;
+}
+
+.css-1hskriy {
+  /*MUI css for slider component*/
+  margin: 5px 0px;
 }
 
 .function-container {
   display: flex;
-
+  flex-direction: column;
 }
 
 .graph {
-  width: fit-content;
+  box-sizing: content-box;
+  width: 100%;
+  /* margin: 20px; */
 }
 
 .css-1l7c0cy>div>div>div {
