--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ h1 {
 }
 
 .solutions {
-  font-weight: 300;
+  font-weight: 700;
 }
 
 .container {
@@ -85,6 +85,7 @@ h1 {
 }
 
 .function-wrapper {
+  width: fit-content;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -98,13 +99,15 @@ h1 {
 }
 
 .function-container {
+  width: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .graph {
   box-sizing: content-box;
-  width: 100%;
+  /* width: 100%; */
   /* margin: 20px; */
 }
 
@@ -129,10 +132,23 @@ h1 {
   /* FIXING OPTICAL ILLUSIONS, I KNOW WHAT I'M DOING */
   transform: translate(0, -15px);
   font-size: 1.4vmin;
-  font-weight: 100;
+  font-weight: 300;
   font-style: italic;
   display: flex;
   justify-content: center;
+}
+
+.buttondiv {
+  box-sizing: border-box;
+  display: flex;
+  padding: 10px;
+  margin-top: 20px
+}
+
+.MuiPaper-root>h2 {
+  font-weight: 700;
+  font-style: normal;
+  font-size: 1.6vmin;
 }
 
 .top-right-legend {
