--- a/src/App.css
+++ b/src/App.css
@@ -54,28 +54,72 @@ h1 {
   margin-bottom: 50px;
 }
 
-.header-wrapper>span,
-.function-wrapper {
-  border-radius: 25px;
+.menu-wrapper {
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  justify-content: center;
+  align-items: center;
+}
+
+.header-wrapper>span {
   padding: 20px;
+}
+
+.header-wrapper>span,
+.sliders-wrapper {
+  border-radius: 25px;
+
   /* border-radius: 65px; */
-  background: #f0f0f0;
-  box-shadow: 25px 25px 50px #d8d8d8, -25px -25px 50px #ffffff;
+  background: #efefef;
+  box-shadow: -6px -6px 14px rgba(248, 248, 248, 0.7),
+    -6px -6px 10px rgba(255, 255, 255, .5),
+    6px 6px 8px rgba(255, 255, 255, .075),
+    6px 6px 10px rgba(0, 0, 0, .15);
+}
+
+.MuiSlider-thumb {
+  color: #efefef;
+}
+
+.MuiSlider-rail {
+  color: rgb(206, 206, 206);
+}
+
+.MuiSlider-thumb.Mui-focusVisible,
+.MuiSlider-thumb:hover {
+  box-shadow: 0px 0px 4px rgba(109, 107, 107, 0.7) !important;
+}
+
+.MuiSlider-track {
+  color: #efefef;
+  box-shadow: -2px -2px 5px rgba(248, 248, 248, 0.7),
+    -2px -2px 3px rgba(255, 255, 255, .5),
+    2px 2px 2px rgba(255, 255, 255, .075),
+    2px 2px 3px rgba(0, 0, 0, .15);
 }
 
 .css-ohwg9z {
   border-radius: 25px;
   padding: 20px;
   /* border-radius: 65px; */
-  background: #f0f0f0;
-  box-shadow: inset 15px 25px 10px #ededed, -25px -25px 50px #ffffff;
+  background: #efefef;
+  box-shadow: -6px -6px 14px rgba(255, 255, 255, .7),
+    -6px -6px 10px rgba(255, 255, 255, .5),
+    6px 6px 8px rgba(255, 255, 255, .075),
+    6px 6px 10px rgba(0, 0, 0, .15);
 }
 
 .input-section,
-.graph-wrapper {
+.graph-container {
   display: flex;
-
 }
+
+.graph-container {
+  margin-top: 1rem;
+  margin-bottom: 3rem;
+}
+
 
 .input-field {
   height: min-content;
@@ -84,7 +128,7 @@ h1 {
   align-self: center;
 }
 
-.function-wrapper {
+.sliders-wrapper {
   width: fit-content;
   display: flex;
   flex-direction: column;
@@ -99,15 +143,19 @@ h1 {
 }
 
 .function-container {
-  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 40%;
+}
+
+.graph-wrapper {
+  width: 60%;
 }
 
 .graph {
   box-sizing: content-box;
-  /* width: 100%; */
+  width: 100%;
   /* margin: 20px; */
 }
 
@@ -138,11 +186,83 @@ h1 {
   justify-content: center;
 }
 
+.morebuttondiv {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 10px;
+}
+
 .buttondiv {
   box-sizing: border-box;
+  width: 100%;
   display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.formula-button {
+  box-sizing: border-box;
+  width: 50%;
+}
+
+.formula-button>button {
   padding: 10px;
-  margin-top: 20px
+}
+
+.formula-button * {
+  text-transform: none;
+}
+
+.sliders-wrapper>span {
+  padding: 20px;
+  border-radius: 15px !important;
+  margin-bottom: 15px;
+}
+
+.settings-button button {
+  margin-top: 15px;
+}
+
+.sliders-wrapper>span,
+.settings-button button {
+
+  background: #efefef;
+  border: none;
+  border-radius: .5rem;
+  color: #444;
+  font-size: 1rem;
+  font-weight: 700;
+  letter-spacing: .2rem;
+  text-align: center;
+  outline: none;
+  cursor: pointer;
+  transition: .2s ease-in-out;
+  box-shadow: -6px -6px 14px rgba(255, 255, 255, .7),
+    -6px -6px 10px rgba(255, 255, 255, .5),
+    6px 6px 8px rgba(255, 255, 255, .075),
+    6px 6px 10px rgba(0, 0, 0, .15);
+}
+
+.settings-button button:hover {
+  background: #efefef;
+  box-shadow: -2px -2px 6px rgba(255, 255, 255, .6),
+    -2px -2px 4px rgba(255, 255, 255, .4),
+    2px 2px 2px rgba(255, 255, 255, .05),
+    2px 2px 4px rgba(0, 0, 0, .1);
+}
+
+.settings-button button:active {
+  box-shadow: inset -2px -2px 6px rgba(255, 255, 255, .7),
+    inset -2px -2px 4px rgba(255, 255, 255, .5),
+    inset 2px 2px 2px rgba(255, 255, 255, .075),
+    inset 2px 2px 4px rgba(0, 0, 0, .15);
+}
+
+.randomButton * {
+  width: 100%;
+  height: 100% !important;
 }
 
 .MuiPaper-root>h2 {
@@ -202,4 +322,35 @@ h1 {
 .css-1l7c0cy>div,
 .css-1l7c0cy>div>div {
   height: fit-content !important;
+} */
+.neumorph-me-daddy {
+  background: #efefef;
+  box-shadow: -6px -6px 14px rgba(255, 255, 255, .7),
+    -6px -6px 10px rgba(255, 255, 255, .5),
+    6px 6px 8px rgba(255, 255, 255, .075),
+    6px 6px 10px rgba(0, 0, 0, .15);
+  border: none;
+  border-radius: .5rem;
+  font-size: 1rem;
+  font-weight: 700;
+  letter-spacing: .2rem;
+  text-align: center;
+  outline: none;
+  cursor: pointer;
+  transition: .2s ease-in-out;
+
+}
+
+/* .formula-button:hover {
+  box-shadow: -2px -2px 6px rgba(255, 255, 255, .6),
+    -2px -2px 4px rgba(255, 255, 255, .4),
+    2px 2px 2px rgba(255, 255, 255, .05),
+    2px 2px 4px rgba(0, 0, 0, .1);
+}
+
+.formula-button:active {
+  box-shadow: inset -2px -2px 6px rgba(255, 255, 255, .7),
+    inset -2px -2px 4px rgba(255, 255, 255, .5),
+    inset 2px 2px 2px rgba(255, 255, 255, .075),
+    inset 2px 2px 4px rgba(0, 0, 0, .15);
 } */
