--- a/src/App.css
+++ b/src/App.css
@@ -62,20 +62,19 @@ h1 {
   align-items: center;
 }
 
-.header-wrapper>span {
+.header-wrapper > span {
   padding: 20px;
 }
 
-.header-wrapper>span,
+.header-wrapper > span,
 .sliders-wrapper {
   border-radius: 25px;
 
   /* border-radius: 65px; */
   background: #efefef;
   box-shadow: -6px -6px 14px rgba(248, 248, 248, 0.7),
-    -6px -6px 10px rgba(255, 255, 255, .5),
-    6px 6px 8px rgba(255, 255, 255, .075),
-    6px 6px 10px rgba(0, 0, 0, .15);
+    -6px -6px 10px rgba(255, 255, 255, 0.5),
+    6px 6px 8px rgba(255, 255, 255, 0.075), 6px 6px 10px rgba(0, 0, 0, 0.15);
 }
 
 .MuiSlider-thumb {
@@ -94,9 +93,8 @@ h1 {
 .MuiSlider-track {
   color: #efefef;
   box-shadow: -2px -2px 5px rgba(248, 248, 248, 0.7),
-    -2px -2px 3px rgba(255, 255, 255, .5),
-    2px 2px 2px rgba(255, 255, 255, .075),
-    2px 2px 3px rgba(0, 0, 0, .15);
+    -2px -2px 3px rgba(255, 255, 255, 0.5),
+    2px 2px 2px rgba(255, 255, 255, 0.075), 2px 2px 3px rgba(0, 0, 0, 0.15);
 }
 
 .css-ohwg9z {
@@ -104,10 +102,9 @@ h1 {
   padding: 20px;
   /* border-radius: 65px; */
   background: #efefef;
-  box-shadow: -6px -6px 14px rgba(255, 255, 255, .7),
-    -6px -6px 10px rgba(255, 255, 255, .5),
-    6px 6px 8px rgba(255, 255, 255, .075),
-    6px 6px 10px rgba(0, 0, 0, .15);
+  box-shadow: -6px -6px 14px rgba(255, 255, 255, 0.7),
+    -6px -6px 10px rgba(255, 255, 255, 0.5),
+    6px 6px 8px rgba(255, 255, 255, 0.075), 6px 6px 10px rgba(0, 0, 0, 0.15);
 }
 
 .input-section,
@@ -162,13 +159,13 @@ h1 {
   /* margin: 20px; */
 }
 
-.css-1l7c0cy>div>div>div {
+.css-1l7c0cy > div > div > div {
   display: flex;
   justify-content: center;
   width: auto;
 }
 
-.css-1l7c0cy>div>div>div>div {
+.css-1l7c0cy > div > div > div > div {
   width: 80%;
   padding: 10px;
   display: flex;
@@ -176,19 +173,21 @@ h1 {
   justify-content: center;
 }
 
-.MuiPaper-root>* {
+.MuiPaper-root > * {
   text-align: center;
   margin-block-start: 0.5em;
   margin-block-end: 0.5em;
   /* FIXING OPTICAL ILLUSIONS, I KNOW WHAT I'M DOING */
   transform: translate(0, -15px);
-  font-size: 1.4vmin;
+  font-size: 0.95vmax;
   font-weight: 300;
   font-style: italic;
   display: flex;
   justify-content: center;
 }
-
+.css-uhb51p {
+  padding: 20px !important;
+}
 .morebuttondiv {
   margin-top: 20px;
   display: flex;
@@ -210,7 +209,7 @@ h1 {
   width: 50%;
 }
 
-.formula-button>button {
+.formula-button > button {
   padding: 10px;
 }
 
@@ -218,7 +217,7 @@ h1 {
   text-transform: none;
 }
 
-.sliders-wrapper>span {
+.sliders-wrapper > span {
   padding: 20px;
   border-radius: 15px !important;
   margin-bottom: 15px;
@@ -228,39 +227,36 @@ h1 {
   margin-top: 15px;
 }
 
-.sliders-wrapper>span,
+.sliders-wrapper > span,
 .settings-button button {
-
   background: #efefef;
   border: none;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   color: #444;
   font-size: 1rem;
   font-weight: 700;
-  letter-spacing: .2rem;
+  letter-spacing: 0.2rem;
   text-align: center;
   outline: none;
   cursor: pointer;
-  transition: .2s ease-in-out;
-  box-shadow: -6px -6px 14px rgba(255, 255, 255, .7),
-    -6px -6px 10px rgba(255, 255, 255, .5),
-    6px 6px 8px rgba(255, 255, 255, .075),
-    6px 6px 10px rgba(0, 0, 0, .15);
+  transition: 0.2s ease-in-out;
+  box-shadow: -6px -6px 14px rgba(255, 255, 255, 0.7),
+    -6px -6px 10px rgba(255, 255, 255, 0.5),
+    6px 6px 8px rgba(255, 255, 255, 0.075), 6px 6px 10px rgba(0, 0, 0, 0.15);
 }
 
 .settings-button button:hover {
   background: #efefef;
-  box-shadow: -2px -2px 6px rgba(255, 255, 255, .6),
-    -2px -2px 4px rgba(255, 255, 255, .4),
-    2px 2px 2px rgba(255, 255, 255, .05),
-    2px 2px 4px rgba(0, 0, 0, .1);
+  box-shadow: -2px -2px 6px rgba(255, 255, 255, 0.6),
+    -2px -2px 4px rgba(255, 255, 255, 0.4),
+    2px 2px 2px rgba(255, 255, 255, 0.05), 2px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .settings-button button:active {
-  box-shadow: inset -2px -2px 6px rgba(255, 255, 255, .7),
-    inset -2px -2px 4px rgba(255, 255, 255, .5),
-    inset 2px 2px 2px rgba(255, 255, 255, .075),
-    inset 2px 2px 4px rgba(0, 0, 0, .15);
+  box-shadow: inset -2px -2px 6px rgba(255, 255, 255, 0.7),
+    inset -2px -2px 4px rgba(255, 255, 255, 0.5),
+    inset 2px 2px 2px rgba(255, 255, 255, 0.075),
+    inset 2px 2px 4px rgba(0, 0, 0, 0.15);
 }
 
 .randomButton * {
@@ -268,7 +264,7 @@ h1 {
   height: 100% !important;
 }
 
-.MuiPaper-root>h2 {
+.MuiPaper-root > h2 {
   font-weight: 700;
   font-style: normal;
   font-size: 1.6vmin;
@@ -278,12 +274,12 @@ h1 {
   display: none;
 }
 
-.katex-display>.katex {
+.katex-display > .katex {
   white-space: normal;
 }
 
 /* Add space between broken lines: */
-.katex-display>.base {
+.katex-display > .base {
   margin: 0.25em 0;
 }
 
@@ -328,20 +324,18 @@ h1 {
 } */
 .neumorph-me-daddy {
   background: #efefef;
-  box-shadow: -6px -6px 14px rgba(255, 255, 255, .7),
-    -6px -6px 10px rgba(255, 255, 255, .5),
-    6px 6px 8px rgba(255, 255, 255, .075),
-    6px 6px 10px rgba(0, 0, 0, .15);
+  box-shadow: -6px -6px 14px rgba(255, 255, 255, 0.7),
+    -6px -6px 10px rgba(255, 255, 255, 0.5),
+    6px 6px 8px rgba(255, 255, 255, 0.075), 6px 6px 10px rgba(0, 0, 0, 0.15);
   border: none;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   font-size: 1rem;
   font-weight: 700;
-  letter-spacing: .2rem;
+  letter-spacing: 0.2rem;
   text-align: center;
   outline: none;
   cursor: pointer;
-  transition: .2s ease-in-out;
-
+  transition: 0.2s ease-in-out;
 }
 
 /* .formula-button:hover {
