css jiu jitsu continues

--- a/src/App.css
+++ b/src/App.css
@@ -185,7 +185,7 @@ h1 {
   display: flex;
   justify-content: center;
 }
-.css-uhb51p {
+.css-uhb5lp {
   padding: 20px !important;
 }
 .morebuttondiv {
