--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,8 @@ h1 {
   font-weight: 400;
   margin-bottom: 30px;
   /*css reset*/
-  width: 50%;
+  width: 80%;
+  text-align: center;
 }
 
 #warning {
@@ -62,11 +63,11 @@ h1 {
   align-items: center;
 }
 
-.header-wrapper > span {
+.header-wrapper>span {
   padding: 20px;
 }
 
-.header-wrapper > span,
+.header-wrapper>span,
 .sliders-wrapper {
   border-radius: 25px;
 
@@ -108,11 +109,85 @@ h1 {
 }
 
 .input-section,
-.graph-container {
+.graph-container,
+.sliders {
   display: flex;
 }
 
+@media (max-width: 1300px) {
+  .primary {
+    padding: 0 !important;
+  }
+
+  .graph-container {
+    flex-direction: column;
+  }
+
+  .sliders {
+    flex-direction: row !important;
+    gap: 45px;
+  }
+
+  .sliders-wrapper {
+    flex-direction: row;
+  }
+
+  .function-container {
+    width: 100% !important;
+  }
+
+  .graph-wrapper {
+    width: 735px !important;
+  }
+}
+
+@media (max-width: 800px) {
+  .graph-container {
+    flex-direction: column;
+  }
+
+  .sliders {
+    flex-direction: column !important;
+    gap: 0px !important;
+  }
+
+  .sliders-wrapper {
+    flex-direction: row;
+  }
+
+  .function-container {
+    width: 100% !important;
+  }
+
+  .graph-wrapper {
+    width: 100vw !important;
+    height: 100vw !important;
+  }
+
+  .graph {
+    height: 100vw;
+  }
+
+  .container.secondary {
+    margin: 0;
+    padding: 45px 0;
+  }
+
+
+}
+
+.primary {
+  box-sizing: border-box;
+  padding: 25px;
+}
+
 .graph-container {
+  align-items: center;
+}
+
+.graph-container {
+  display: flex;
+  flex-wrap: wrap;
   margin-top: 1rem;
   margin-bottom: 3rem;
 }
@@ -126,6 +201,12 @@ h1 {
   bottom: 0;
   margin-bottom: 0;
   align-self: center;
+}
+
+.sliders {
+  display: flex;
+  flex-direction: column;
+  gap: 45px;
 }
 
 .sliders-wrapper {
@@ -159,13 +240,13 @@ h1 {
   /* margin: 20px; */
 }
 
-.css-1l7c0cy > div > div > div {
+.css-1l7c0cy>div>div>div {
   display: flex;
   justify-content: center;
   width: auto;
 }
 
-.css-1l7c0cy > div > div > div > div {
+.css-1l7c0cy>div>div>div>div {
   width: 80%;
   padding: 10px;
   display: flex;
@@ -173,21 +254,23 @@ h1 {
   justify-content: center;
 }
 
-.MuiPaper-root > * {
+.MuiPaper-root>* {
   text-align: center;
   margin-block-start: 0.5em;
   margin-block-end: 0.5em;
   /* FIXING OPTICAL ILLUSIONS, I KNOW WHAT I'M DOING */
   transform: translate(0, -15px);
-  font-size: 0.95vmax;
+  font-size: 1rem;
   font-weight: 300;
   font-style: italic;
   display: flex;
   justify-content: center;
 }
+
 .css-uhb5lp {
   padding: 20px !important;
 }
+
 .morebuttondiv {
   margin-top: 20px;
   display: flex;
@@ -209,7 +292,7 @@ h1 {
   width: 50%;
 }
 
-.formula-button > button {
+.formula-button>button {
   padding: 10px;
 }
 
@@ -217,7 +300,7 @@ h1 {
   text-transform: none;
 }
 
-.sliders-wrapper > span {
+.sliders-wrapper>span {
   padding: 20px;
   border-radius: 15px !important;
   margin-bottom: 15px;
@@ -227,7 +310,7 @@ h1 {
   margin-top: 15px;
 }
 
-.sliders-wrapper > span,
+.sliders-wrapper>span,
 .settings-button button {
   background: #efefef;
   border: none;
@@ -264,22 +347,22 @@ h1 {
   height: 100% !important;
 }
 
-.MuiPaper-root > h2 {
+.MuiPaper-root>h2 {
   font-weight: 700;
   font-style: normal;
-  font-size: 1.6vmin;
+  font-size: 1.6rem;
 }
 
 .top-right-legend {
   display: none;
 }
 
-.katex-display > .katex {
+.katex-display>.katex {
   white-space: normal;
 }
 
 /* Add space between broken lines: */
-.katex-display > .base {
+.katex-display>.base {
   margin: 0.25em 0;
 }
 
